Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4970

Qt doesn't support retrieving Windows Vista style large icons for a file

    XMLWordPrintable

Details

    • 87ff0af425656d12c4766a57db60674d63ffa584

    Description

      QFileIconProvider::icon function allows you to retrieve the desktop icon for the given file, but it doesn't return large icons that are supported by Windows Vista and 7. (SHIL_EXTRALARGE for 48x48 icon and SHIL_JUMBO for 256x256 icon)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            dzyubenk Denis Dzyubenko (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes