src/plugins/platforms/windows/qwindowscontext.cpp
@@ -218,6 +218,7 @@ bool QWindowsUser32DLL::initTouch()
 QWindowsShell32DLL::QWindowsShell32DLL()
     : sHCreateItemFromParsingName(0)
     , sHGetStockIconInfo(0)
+    , sHGetImageList(0)
 {
 }
 
@@ -226,6 +227,7 @@ void QWindowsShell32DLL::init()
     QSystemLibrary library(QStringLiteral("shell32"));
     sHCreateItemFromParsingName = (SHCreateItemFromParsingName)(library.resolve("SHCreateItemFromParsingName"));
     sHGetStockIconInfo = (SHGetStockIconInfo)library.resolve("SHGetStockIconInfo");
+    sHGetImageList = (SHGetImageList)library.resolve("SHGetImageList");
 }
 
 QWindowsUser32DLL QWindowsContext::user32dll;
